# statgen

./: .gitignore  AGENTS.md  CHANGELOG.md  DEVELOPMENT.md  Makefile  README.md  pyproject.toml
.github/workflows/: release.yaml
dev/: implementation_plan.md
matlab/: statgen_load_annotations.m  statgen_load_reference.m  statgen_load_sumstats.m  statgen_version.m
matlab/+statgen/: AnnotationPanel.m  AnnotationShard.m  ReferencePanel.m  ReferenceShard.m  Sumstats.m  SumstatsShard.m  canonical_labels.m  create_annotation.m  create_annotations.m  create_sumstats.m  ensure_cell_col.m  load_annotations.m  load_annotations_cache.m  load_reference.m  load_reference_cache.m  load_sumstats.m  load_sumstats_cache.m  save_annotations_cache.m  save_reference_cache.m  save_sumstats_cache.m  validate_requested_shards.m  version.m
matlab/+statgen/private/: canonical_labels.m  ensure_cell_col.m  validate_requested_shards.m
python/: README.md  pyproject.toml
python/statgen/: _utils.py  annotations.py  genotype.py  ld.py  reference.py  sumstats.py
script/: statgen_build_ld.py
spec/: SPEC.md  annotations.md  contigs-and-shards.md  conventions.md  genotype.md  ld.md  matlab.md  performance-contract.md  python.md  reference.md  sumstats.md  testing.md
tests/: conftest.py  test_phase0.py  test_phase1.py  test_phase2.py  test_phase3.py
tests/fixtures/: generate.py
tests/fixtures/annotations/: anno1.bed  anno2.bed
tests/fixtures/genotype/sharded/: 1.bed  1.bim  X.bed  X.bim  X.fam
tests/fixtures/ld/1/: ld_r.f32  mafvec.f32  metadata.json
(+11 files in other folders)
