[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "statgen"
version = "0.1.0"
description = "Statistical genetics data objects and loaders for Python and MATLAB/Octave."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "scipy",
    "pandas",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["statgen*"]
